package main;

import java.util.List;

public interface ProblemSolver {
    List<Dame> solve(int iterations, List<Dame> damen);
}
